arreglando el footer

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <footer
   th:fragment="pie-pagina"
-  class="piedepagina py-1 mt-5 bg-secondary "
+  class="piedepagina  bg-secondary "
   role="contentinfo"
   xmlns:th="http://www.thymeleaf.org"
 >
