--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,15 +1,19 @@
-.piedepagina {
-	
 
-    position:relative;
+html{
+    position: relative;
+    min-height: 100%;
+}
+
+
+footer{
+    position: absolute;
     bottom: 0;
+    color: #fff;
     text-align: center;
     height: 30px;
     width: 100%;
-    color: rgb(255, 255, 255);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-
-
-
+    
 }
+
