--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
   <body>
     <header th:insert="fragments/header :: header"></header>
 
-    <div class="container-fluid">
+    <div class="container-fluid mb-5">
       <div
         class="row row-cols-xs-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-6 row-cols-xl-6 row-cols-xxl-6 g-6 "
       >
