--- a/src/main/resources/templates/hosto.html
+++ b/src/main/resources/templates/hosto.html
@@ -23,10 +23,9 @@
 
   <body>
         <div class="container">
-            <ul th:each=" o: ${odcs}">
-                <li th:text="${o.descripcion}"></li>
-                <li th:text="${o.factura}"></li>
-            </ul>
+            
+                <h2>hola</h2>
+            
 
         </div>
 
@@ -38,7 +37,7 @@
 
 
 
-    <footer th:insert="fragments/footer :: footer"></footer>
+   
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
